# us-census-bureau

./: .gitignore  README.md  catalog.json  dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
.state/local/: catalog.json
assets/acs/: acs.py
assets/catalog/: catalog.py
assets/data_fetcher/: data_fetcher.py
assets/population/: population.py
assets/poverty/: poverty.py
assets/variables/: variables.py
src/: main.py
src/census_utils/: __init__.py  api.py  catalog.py  constants.py  programs.py  variables.py
src/nodes/: acs.py  catalog_asset.py  cbp.py  census_datasets.py  ecnbasic.py  intltrade.py  pep.py  sahie.py  saipe.py
