[project]
name = "us-census-bureau"
version = "0.1.0"
description = "US Census Bureau data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=17.0.0",
    "tenacity>=8.5.0",
    "boto3>=1.35.0",
    "ratelimit>=2.2.1",
    "duckdb>=1.3.2",
    "requests>=2.32.5",
    "pyiceberg>=0.5.0"
]
