[project]
name = "us-census-bureau"
version = "0.1.0"
description = "US Census Bureau data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "pyarrow>=17.0.0",
    "tenacity>=8.5.0",
    "boto3>=1.35.0",
    "ratelimit>=2.2.1",
    "duckdb>=1.3.2",
    "requests>=2.32.5",
    "deltalake>=0.17.0",
    "sqlalchemy>=2.0.43",

    "duckdb",
]
